--- a/Gestion.bib
+++ b/Gestion.bib
@@ -2,8 +2,7 @@
 
 @misc{2024_MiembroCCE,
   Author = {},  
-  TITLE = {Miembro del comité de programa de la \textit{21st International Conference on Electrical
-Engineering, Computing Science and Automatic Control (CCE)}},
+  TITLE = {Miembro del comité de programa de la 21st International Conference on Electrical Engineering, Computing Science and Automatic Control (CCE)},
   YEAR = 2024,
   month=oct,
   HOWPUBLISHED = {}}
@@ -22,19 +21,56 @@ Engineering, Computing Science and Automatic Control (CCE)}},
   month=mar,
   HOWPUBLISHED = {}}
 
-
 @misc{2023_MiembroCCE,
   Author = {},  
-  TITLE = {Miembro del comité de programa de la \textit{20th International Conference on Electrical
-Engineering, Computing Science and Automatic Control (CCE)}},
+  TITLE = {Miembro del comité de programa de la 20th International Conference on Electrical Engineering, Computing Science and Automatic Control (CCE)},
   YEAR = 2023,
   month=oct,
   HOWPUBLISHED = {}}
 
+@misc{2023_CIPPA,
+  Author = {},  
+  TITLE = {Miembro de la Comisión de Ingreso, Promoción y Permanencia del Personal Académico (CIPPPA) de la UPV.},
+  YEAR = 2023,
+  month=nov,
+  HOWPUBLISHED = {}}
+
 @misc{2022_MiembroCCE,
   Author = {},  
-  TITLE = {Miembro del comité de programa de la \textit{19th International Conference on Electrical
-Engineering, Computing Science and Automatic Control (CCE)}},
+  TITLE = {Miembro del comité de programa de la 19th International Conference on Electrical Engineering, Computing Science and Automatic Control (CCE)},
   YEAR = 2022,
   month=oct,
   HOWPUBLISHED = {}}
+
+@misc{2022_EvaluadorProyectos,
+  Author = {},  
+  TITLE = {Comisión de Evaluación de Proyectos de la Fase Estatal del 24o. Certamen Estatal Creatividad e Innovacion Tecnológica Expociencias Tamaulipas 2022.},
+  YEAR = 2022,
+  month=nov,
+  HOWPUBLISHED = {}}
+
+
+%\begin{rubric}{Gestión Académica y Evaluador de Proyectos y Programas de Estudios}
+%\entry*[2021-2023]
+
+%\entry*[2023]
+%Miembro del Comité de Programa de la 20th International Conference on Electrical Engineering, Computing Science and Automatic Control (CCE)
+%\entry*[2023]
+%Evaluador de proyectos de la convocatoria CONACYT Ciencia de Frontera 2023.
+%\entry*[2022]
+%Miembro del Comité de Programa de la 19th International Conference on Electrical Engineering, Computing Science and Automatic Control (CCE)
+%\entry*[2022]
+
+\entry*[2018]
+Evaluación de Planes y Programas de Estudio por instrucciones de la Secretaría de Educación de Tamaulipas. 
+\entry*[2017-2020]
+Integrante del Consejo de Calidad como representante docente del Personal Académico de Ingenieniería en Tecnologías de la Información de la UPV
+\entry*[2017]
+Miembro de la Comisión de Revisión y Actualización del Programa de Estudios de la Maestría en Ingeniería de la UPV ante la Dirección General de Profesiones.
+\entry*[2017-2018]
+Presidente de Academia del Programa Académico Ingeniería en Tecnologías de la Información de la UPV
+\entry*[2010]
+Miembro de la Comisión de Postulación del Programa de Maestría en Ingeniería de la UPV ante del Programa Nacional de Posgrados de Calidad (PNPC).
+\entry*[2009]
+Miembro de la Comisión de Creación del Programa de Maestría en Ingeniería de la UPV.
+\end{rubric}
