--- a/Gestion.bib
+++ b/Gestion.bib
@@ -49,28 +49,48 @@
   month=nov,
   HOWPUBLISHED = {}}
 
+@misc{2018_EvaluadorPlanesEstudio,
+  Author = {},  
+  TITLE = {Evaluación de Planes y Programas de Estudio por instrucciones de la Secretaría de Educación de Tamaulipas. },
+  YEAR = 2022,
+  month=nov,
+  HOWPUBLISHED = {}}
 
-%\begin{rubric}{Gestión Académica y Evaluador de Proyectos y Programas de Estudios}
-%\entry*[2021-2023]
+@misc{2020_MiembroComiteCalidad,
+  Author = {},  
+  TITLE = {Integrante del Consejo de Calidad como representante docente del Personal Académico de Ingeniería en Tecnologías de la Información de la UPV},
+  YEAR = 2020,
+  month=mar,
+  HOWPUBLISHED = {}}
 
-%\entry*[2023]
-%Miembro del Comité de Programa de la 20th International Conference on Electrical Engineering, Computing Science and Automatic Control (CCE)
-%\entry*[2023]
-%Evaluador de proyectos de la convocatoria CONACYT Ciencia de Frontera 2023.
-%\entry*[2022]
-%Miembro del Comité de Programa de la 19th International Conference on Electrical Engineering, Computing Science and Automatic Control (CCE)
-%\entry*[2022]
+@misc{2017_ActualizacionPlanEstudiosMaestria,
+  Author = {},  
+  TITLE = {Miembro de la Comisión de Revisión y Actualización del Programa de Estudios de la Maestría en Ingeniería de la UPV ante la Dirección General de Profesiones.},
+  YEAR = 2017,
+  month=mar,
+  HOWPUBLISHED = {}}
 
-\entry*[2018]
-Evaluación de Planes y Programas de Estudio por instrucciones de la Secretaría de Educación de Tamaulipas. 
-\entry*[2017-2020]
-Integrante del Consejo de Calidad como representante docente del Personal Académico de Ingenieniería en Tecnologías de la Información de la UPV
-\entry*[2017]
-Miembro de la Comisión de Revisión y Actualización del Programa de Estudios de la Maestría en Ingeniería de la UPV ante la Dirección General de Profesiones.
-\entry*[2017-2018]
-Presidente de Academia del Programa Académico Ingeniería en Tecnologías de la Información de la UPV
-\entry*[2010]
-Miembro de la Comisión de Postulación del Programa de Maestría en Ingeniería de la UPV ante del Programa Nacional de Posgrados de Calidad (PNPC).
-\entry*[2009]
-Miembro de la Comisión de Creación del Programa de Maestría en Ingeniería de la UPV.
-\end{rubric}
+@misc{2010_PostulacionPNPC,
+  Author = {},  
+  TITLE = {Miembro de la Comisión de Postulación del Programa de Maestría en Ingeniería de la UPV ante del Programa Nacional de Posgrados de Calidad (PNPC).},
+  YEAR = 2009,
+  month=mar,
+  HOWPUBLISHED = {}}
+
+@misc{2009_CreacionPosgrado,
+  Author = {},  
+  TITLE = {Miembro de la Comisión de Creación del Programa de Maestría en Ingeniería de la UPV.},
+  YEAR = 2009,
+  month=mar,
+  HOWPUBLISHED = {}}
+
+
+
+
+%\entry*[2017-2018]
+%Presidente de Academia del Programa Académico Ingeniería en Tecnologías de la Información de la UPV
+%\entry*[2010]
+
+%\entry*[2009]
+
+%\end{rubric}
