--- a/Gestion.bib
+++ b/Gestion.bib
@@ -1,4 +1,10 @@
 
+@misc{2024_CreacionDoctorado,
+  Author = {},  
+  TITLE = {Miembro de la Comisión de Creación del Programa de Doctorado en Ciencias y Tecnologías Aplicadas de la UPV},
+  YEAR = 2024,
+  month=mar,
+  HOWPUBLISHED = {}}
 
 @misc{2024_MiembroCCE,
   Author = {},  
