--- a/ColaboradorProyectos.bib
+++ b/ColaboradorProyectos.bib
@@ -1,5 +1,17 @@
 % This file was created with JabRef 2.10.
 % Encoding: UTF-8
+
+@unpublished{2024_Patente,
+  author       = "Yahir Hernández-Mier and Said Polanco-Martagón and \textbf{M. A. Nuño-Maganda} and Jesús Guadalupe Herrera-Vanoye and Adalí Gutierrez-Ponce",
+  title        = "Proceso y Dispositivo Electromecánico para el Desprendimiento Automatizado de Pedúnculos de Frutos Redondeados",
+  howpublished = "Patente (en trámite) registada ante el Instituto Mexicano de la Propiedad Industrial (IMPI)",
+  month        = "06",
+  year         = "2024",
+  note         = "",
+  annote       = ""
+}
+
+
 @unpublished{2023_DerechoAutor1,
   author       = "José Hugo Barrón-Zambrano and Alan Díaz-Manríquez and Juan Carlos Elizondo-Leal and José David Filoteo-Razo  and  Daniel López-Aguirre and  José Ramón Martínez-Angulo and \textbf{M. A. Nuño-Maganda}  and Vicente Paul Saldivar-Alonso and Jesús Sierra Martínez",
   title        = "Aplicación Móvil para el Monitoreo de la Ingesta de Materia Seca en Pequeños Rumiantes",
