--- a/Publications.tex
+++ b/Publications.tex
@@ -241,7 +241,7 @@ citecolor=green]{hyperref}
 
 \begin{center}
     \textbf{\Large \scshape Marco Aurelio Nuño Maganda} \\ \vspace{1pt}
-    \textit{Profesor Cientifico Investigador en Ciencias de la Computación} \\
+    \textit{Profesor Investigador en Ciencias de la Computación} \\
     Última Actualización: \today \\
 \end{center}
 
