--- a/ColaboradorProyectos.bib
+++ b/ColaboradorProyectos.bib
@@ -4,7 +4,7 @@
 @unpublished{2024_Patente,
   author       = "Yahir Hernández-Mier and Said Polanco-Martagón and \textbf{M. A. Nuño-Maganda} and Jesús Guadalupe Herrera-Vanoye and Adalí Gutierrez-Ponce",
   title        = "Proceso y Dispositivo Electromecánico para el Desprendimiento Automatizado de Pedúnculos de Frutos Redondeados",
-  howpublished = "Patente (en trámite) registada ante el Instituto Mexicano de la Propiedad Industrial (IMPI)",
+  howpublished = "Patente (en trámite) registrada ante el Instituto Mexicano de la Propiedad Industrial (IMPI)",
   month        = "06",
   year         = "2024",
   note         = "",
