--- a/ColaboradorProyectos.bib
+++ b/ColaboradorProyectos.bib
@@ -1,6 +1,17 @@
 % This file was created with JabRef 2.10.
 % Encoding: UTF-8
 
+@unpublished{2024_TransferenciaTecnologica,
+  author       = "\textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón",
+  title        = "Etiquetador y Contador de Microalgas",
+  howpublished = "Transferencia Tecnológica recibida por la Universidad Tecnológica del Mar Tamaulipas Bicentenario",
+  month        = "08",
+  year         = "2024",
+  note         = "",
+  annote       = ""
+}
+
+
 @unpublished{2024_Patente,
   author       = "Yahir Hernández-Mier and Said Polanco-Martagón and \textbf{M. A. Nuño-Maganda} and Jesús Guadalupe Herrera-Vanoye and Adalí Gutierrez-Ponce",
   title        = "Proceso y Dispositivo Electromecánico para el Desprendimiento Automatizado de Pedúnculos de Frutos Redondeados",
