--- a/ListaGlobalPublicaciones/Tabla.tex
+++ b/ListaGlobalPublicaciones/Tabla.tex
@@ -1,6 +1,6 @@
 %Lista Articulos
 \newcounter{conteoarticulos}
-\setcounter{conteoarticulos}{98}
+\setcounter{conteoarticulos}{103}
 \begin{longtable}{p{0.5cm}|p{14.0cm}|p{2cm}}
 \hline
 \textbf{\#} &
@@ -15,6 +15,16 @@
 \endfoot 
 \endlastfoot 
 \theconteoarticulos&\fullcite{MarcoNuno_Revista_2024_12_00}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{Difusion2024h}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{MarcoNuno_CongArbEsp_2024_10_00B}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{MarcoNuno_CongArbEsp_2024_10_00C}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{MarcoNuno_CongArbEsp_2024_10_00D}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{MarcoNuno_CongArbEsp_2024_10_00A}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNuno_Revista_2024_09_00}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
