--- a/CongresosEspanol.bib
+++ b/CongresosEspanol.bib
@@ -415,3 +415,67 @@ Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
 }
 
 
+
+
+
+@incollection{MarcoNuno_CongArbEsp_2024_10_00A,
+    author = {Adrián Alejandro Ruiz-Márquez and Brayan Olivares-Rodriguez and Javier Martin Palmero-Torres and Ana Cecilia Rodríguez-Chávez and \textbf{M. A. Nuño-Maganda}},
+    title = {Desarrollo de una Aplicación para la Detección y Conteo de Monedas en Video en Tiempo Real Utilizando OpenCV y PyQt6},
+    editor      = "María del Carmen Santiago-Díaz and Gustavo Trinidad Rubín-Linares and Ana Claudia Zenteno-Vázquez and Judith Pérez-Marcial",
+    booktitle   = "Avances en Computación: Perspectivas Académicas y de Investigación en Inteligencia Artificial, Ciencia de Datos y Seguridad",
+    publisher   = "Benemérita Universidad Autónoma de Puebla",
+    address     = "Puebla, Puebla, México",
+    URL = {https://conacic.siycise.org/docs/LIBRO2_2024_Avances_en_Computacio%CC%81n_Perspectivas_Acade%CC%81micas_y_de_Investigacio%CC%81n_en_Inteligencia_Artificial_Ciencia_de_Datos_y_Seguridad.pdf},
+    year        = 2024,
+    Month  = 10,
+    pages       = "78--87",
+    note        = {ISBN:  978-607-8975-34-1}
+}
+
+@incollection{MarcoNuno_CongArbEsp_2024_10_00B,
+    author = {Melchor Hernández-Diaz and Jesús Antonio Barbosa-Rodríguez and Ximena Abigaíl Moreno-Ledezma and Juan Daniel Torres-Colorado and José Hubo Barrón-Zambrano and \textbf{M. A. Nuño-Maganda}},
+	title = {Identificador de Género mediante Audio},
+    editor      = "María del Carmen Santiago-Díaz and Gustavo Trinidad Rubín-Linares and Ana Claudia Zenteno-Vázquez and Judith Pérez-Marcial",
+    booktitle   = "Avances en Computación: Perspectivas Académicas y de Investigación en Inteligencia Artificial, Ciencia de Datos y Seguridad",
+    publisher   = "Benemérita Universidad Autónoma de Puebla",
+    address     = "Puebla, Puebla, México",
+    URL = {https://conacic.siycise.org/docs/LIBRO2_2024_Avances_en_Computacio%CC%81n_Perspectivas_Acade%CC%81micas_y_de_Investigacio%CC%81n_en_Inteligencia_Artificial_Ciencia_de_Datos_y_Seguridad.pdf},
+    year        = 2024,
+    Month  = 10,
+    pages       = "41--50",
+    note        = {ISBN:  978-607-8975-34-1}
+}
+
+@incollection{MarcoNuno_CongArbEsp_2024_10_00C,
+    author = {Aldo de Jesus Peña-Cuellar and Jesús David Treviño-Gandarilla and Abraham Isai Cantu-Sanchez and Jose Guadalupe Martinez-Herrera and \textbf{M. A. Nuño-Maganda}},
+	title = {Prototipo para la detección de vehículos y motocicletas en puntos ciegos utilizando el modelo YOLO},
+    editor      = "María del Carmen Santiago-Díaz and Gustavo Trinidad Rubín-Linares and Ana Claudia Zenteno-Vázquez and Judith Pérez-Marcial",
+    booktitle   = "Horizontes en Computación: Estudios sobre Inteligencia Artificial, Ciencia de Datos y Seguridad",
+    publisher   = "Benemérita Universidad Autónoma de Puebla",
+    address     = "Puebla, Puebla, México",
+    URL = {https://conacic.siycise.org/docs/LIBRO1_2024_HORIZONTES_EN_COMPUTACIO%CC%81N_ESTUDIOS_SOBRE_INTELIGENCIA_ARTIFICIAL_CIENCIA_DE_DATOS_Y_SEGURIDAD.pdf},
+    year        = 2024,
+    Month  = 10,
+    pages       = "101--112",
+    note        = {ISBN:  978-607-8975-38-9}
+}
+
+@incollection{MarcoNuno_CongArbEsp_2024_10_00D,
+    author = {Alejandra Carolina Rodríguez-Porras and Luis Antonio Raga-Reyes and María Fernanda Parras-Pecina and Agustín Alejandro Mota-Hinojosa and \textbf{M. A. Nuño-Maganda} and José Hubo Barrón-Zambrano},
+    editor      = "María del Carmen Santiago-Díaz and Gustavo Trinidad Rubín-Linares and Ana Claudia Zenteno-Vázquez and Judith Pérez-Marcial",
+    booktitle   = "Horizontes en Computación: Estudios sobre Inteligencia Artificial, Ciencia de Datos y Seguridad",
+	title = {Reconocimiento de Signos del Lenguaje de Señas Mexicano utilizando Redes Neuronales Convolucionales},
+    publisher   = "Benemérita Universidad Autónoma de Puebla",
+    address     = "Puebla, Puebla, México",
+    URL = {https://conacic.siycise.org/docs/LIBRO1_2024_HORIZONTES_EN_COMPUTACIO%CC%81N_ESTUDIOS_SOBRE_INTELIGENCIA_ARTIFICIAL_CIENCIA_DE_DATOS_Y_SEGURIDAD.pdf},
+    year        = 2024,
+    Month  = 10,
+    pages       = "124--134",
+    note        = {ISBN:  978-607-8975-38-9}
+}
+
+
+
+
+
+
