--- a/Revistas.bib
+++ b/Revistas.bib
@@ -30,6 +30,22 @@
 }
 
 
+% LATININDEX
+@Article{MarcoNuno_Revista_2024_07_00,
+	AUTHOR = "Jesús A. Martı́nez-Vargas and Said Polanco-Martagón and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda}",
+	TITLE = "{Detección de pimiento morrón utilizando TinyML}",
+	YEAR = "2024",
+	month = {07},
+	JOURNAL = "Research in Computing Science",
+	VOLUME = "153",
+	number = "7",
+	note={\url{https://www.rcs.cic.ipn.mx/2024_153_7/Deteccion%20de%20pimiento%20morron%20utilizando%20TinyML.html}},
+	note = "{\textbf{{ISSN:  1870-4069}}}",
+	PAGES = "125--138"
+}
+
+
+
 
 @article{MarcoNuno_Revista_2024_06_00,
     author = {José Fidencio López-Luna and Eddie Nahúm Armendáriz-Mireles and \textbf{M. A. Nuño-Maganda} and Hiram Herrera-Rivas and Rubén Machucho-Cadena and Jorge Arturo Hernández-Almazán},
