--- a/Revistas.bib
+++ b/Revistas.bib
@@ -32,7 +32,7 @@
 
 % LATININDEX
 @Article{MarcoNuno_Revista_2024_07_00,
-	AUTHOR = "Jesús A. Martı́nez-Vargas and Said Polanco-Martagón and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda}",
+	AUTHOR = "Jesús A. Martínez-Vargas and Said Polanco-Martagón and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda}",
 	TITLE = "{Detección de pimiento morrón utilizando TinyML}",
 	YEAR = "2024",
 	month = {07},
