--- a/Revistas.bib
+++ b/Revistas.bib
@@ -39,7 +39,7 @@
 	JOURNAL = "Research in Computing Science",
 	VOLUME = "153",
 	number = "7",
-	note={\url{https://www.rcs.cic.ipn.mx/2024\_153\_7/Deteccion%20de%20pimiento%20morron%20utilizando%20TinyML.html}},
+    URL = {https://www.rcs.cic.ipn.mx/2024\_153\_7/Deteccion%20de%20pimiento%20morron%20utilizando%20TinyML.html},
 	note = "{\textbf{{ISSN:  1870-4069}}}",
 	PAGES = "125--138"
 }
