--- a/Gestion.bib
+++ b/Gestion.bib
@@ -1,4 +1,20 @@
 
+@misc{2024_RevisorLibroConacicBUAP,
+  Author = {},  
+  TITLE = {Miembro del comité revisor del libro de investigación de circulación nacional titulado ``Avances en computación: perspectivas académicas y de investigación en inteligencia artificial, ciencia de datos y seguridad''},
+  YEAR = 2024,
+  month=dec,
+  HOWPUBLISHED = {}}
+
+
+@misc{2024_RevisorAbstractionAndApplication,
+  Author = {},  
+  TITLE = {Revisor de Artículos para la Revista Abstraction \& Application},
+  YEAR = 2024,
+  month=dec,
+  HOWPUBLISHED = {}}
+
+
 @misc{2024_CreacionDoctorado,
   Author = {},  
   TITLE = {Miembro de la Comisión de Creación del Programa de Doctorado en Ciencias y Tecnologías Aplicadas de la UPV},
