--- a/Publications.tex
+++ b/Publications.tex
@@ -340,8 +340,8 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 \printbibliography[heading={none}, keyword=Cursos, resetnumbers=true]
 \end{refsection}
 
-\section{Colaborador en Proyectos de Investigacion y Desarrollo Tecnológico}
-\begin{refsection}[ColaboradorProyectos]
+\section{Proyectos de Investigacion y Desarrollo Tecnológico}
+\begin{refsection}[Proyectos de Investigacion]
 \nocite{*}                                           
 \printbibliography[heading={none}, keyword=ColaboradorProyectos, resetnumbers=true]
 \end{refsection}
