--- a/Publications.tex
+++ b/Publications.tex
@@ -341,7 +341,7 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 \end{refsection}
 
 \section{Proyectos de Investigacion y Desarrollo Tecnológico}
-\begin{refsection}[Proyectos de Investigacion]
+\begin{refsection}[ColaboradorProyectos]
 \nocite{*}                                           
 \printbibliography[heading={none}, keyword=ColaboradorProyectos, resetnumbers=true]
 \end{refsection}
