--- a/ColaboradorProyectos.bib
+++ b/ColaboradorProyectos.bib
@@ -1,6 +1,19 @@
 % This file was created with JabRef 2.10.
 % Encoding: UTF-8
 
+
+@unpublished{2025_RegistroINAUTOR_A,
+  author       = "\textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón",
+  title        = "Etiquetador y Contador de Microalgas",
+  howpublished = "Programa de Computación con Certificado de Registro Publico del Derecho de Autor ante el Instituto Nacional de Derecho de Autor",
+  month        = "03",
+  year         = "2025",
+  note         = "Número de registro: \textbf{03-2025-020613493800-01}",
+  annote       = ""
+}
+
+
+
 @unpublished{2024_TransferenciaTecnologica,
   author       = "\textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón",
   title        = "Etiquetador y Contador de Microalgas",
@@ -26,7 +39,7 @@
 @unpublished{2023_DerechoAutor1,
   author       = "José Hugo Barrón-Zambrano and Alan Díaz-Manríquez and Juan Carlos Elizondo-Leal and José David Filoteo-Razo  and  Daniel López-Aguirre and  José Ramón Martínez-Angulo and \textbf{M. A. Nuño-Maganda}  and Vicente Paul Saldivar-Alonso and Jesús Sierra Martínez",
   title        = "Aplicación Móvil para el Monitoreo de la Ingesta de Materia Seca en Pequeños Rumiantes",
-  howpublished = "Programa de Computación con Certificado de Registro Publico del Derecho de Autor ante el Instituto Nacional de Derecho de Autor.",
+  howpublished = "Programa de Computación con Certificado de Registro Publico del Derecho de Autor ante el Instituto Nacional de Derecho de Autor",
   month        = "10",
   year         = "2023",
   note         = "",
