--- a/ColaboradorProyectos.bib
+++ b/ColaboradorProyectos.bib
@@ -12,8 +12,6 @@
   annote       = ""
 }
 
-
-
 @unpublished{2024_TransferenciaTecnologica,
   author       = "\textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón",
   title        = "Etiquetador y Contador de Microalgas",
@@ -42,7 +40,7 @@
   howpublished = "Programa de Computación con Certificado de Registro Publico del Derecho de Autor ante el Instituto Nacional de Derecho de Autor",
   month        = "10",
   year         = "2023",
-  note         = "",
+  note         = "Número de registro: \textbf{03-2023-102412204100-01}",
   annote       = ""
 }
 
