--- a/Cursos.bib
+++ b/Cursos.bib
@@ -1,4 +1,13 @@
 
+@unpublished{Curso2025d,
+    author       = {},
+    title        = {Introduction to Modern AI},
+    howpublished = {Cisco Networking Academy},
+    year = 2025,
+    month = 03}
+
+
+
 @unpublished{Curso2024b,
     author       = {},
     title        = {OpenAI Python API Bootcamp: Learn to use AI, GPT, and more!},  
@@ -19,6 +28,13 @@
     howpublished = {Udemy},
     year = 2023,
     month = 12}
+
+@unpublished{Curso2023d,
+    author       = {},
+    title        = {Partnet: NGD Linux Unhatched},
+    howpublished = {Cisco Networking Academy},
+    year = 2023,
+    month = 08}
 
 @unpublished{Curso2023b,
     author       = {},
