--- a/Cursos.bib
+++ b/Cursos.bib
@@ -50,7 +50,7 @@
     year = 2023,
     month = 3}
 
-@unpublished{Curso2023d,
+@unpublished{Curso2023e,
     author       = {},
     title        = {Workshop: Inteligencia Artificial desde cero},
     howpublished = {Oracle},
