--- a/DivulgacionCienciaTecnologia.bib
+++ b/DivulgacionCienciaTecnologia.bib
@@ -1,5 +1,15 @@
 % Encoding: UTF-8
 
+@unpublished{Platica_Taller_2025a,
+    author       = {},
+    title        = {Demostración de Proyectos de Realidad Aumentada y Virtuals},
+    year = 2025,
+    month = 03,
+    day = 18,
+    addendum     = {CBTis 24, Ciudad Victoria, Tamaulipas, Mexico}
+}
+
+
 @unpublished{Platica_Taller_2024a,
     author       = {},
     title        = {Programación de Aplicaciones Móviles},
