--- a/DivulgacionCienciaTecnologia.bib
+++ b/DivulgacionCienciaTecnologia.bib
@@ -2,7 +2,7 @@
 
 @unpublished{Platica_Taller_2025a,
     author       = {},
-    title        = {Demostración de Proyectos de Realidad Aumentada y Virtuals},
+    title        = {Demostración de Proyectos de Realidad Aumentada y Virtual},
     year = 2025,
     month = 03,
     day = 18,
