--- a/DivulgacionCienciaTecnologia.bib
+++ b/DivulgacionCienciaTecnologia.bib
@@ -1,5 +1,15 @@
 % Encoding: UTF-8
 
+@unpublished{Platica_Taller_2025b,
+    author       = {},
+    title        = {Demostración de Proyectos de Realidad Aumentada y Virtual},
+    year = 2025,
+    month = 03,
+    day = 20,
+    addendum     = {CBTis 119, Ciudad Victoria, Tamaulipas, Mexico}
+}
+
+
 @unpublished{Platica_Taller_2025a,
     author       = {},
     title        = {Demostración de Proyectos de Realidad Aumentada y Virtual},
