--- a/Revistas.bib
+++ b/Revistas.bib
@@ -1,6 +1,22 @@
 % Encoding: UTF-8
 % Revistas JCR, SCIMAGOJR o LATININDEX
 
+% Book Chapter que cuenta como revista de acuerdo con CONACSHIT
+@incollection{MarcoNunoBookChapter_2025A,
+  author      = "\textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón and José Hugo Barrón-Zambrano and Juan Carlos Elizondo-Leal and Alan Díaz-Manriquez",
+  title       = "Low-Cost Versatile Remote Healthcare Monitoring of Bedridden Patients ",
+  editor      = "Manisha Guduri and Chinmay Chakraborty and Martin Margala",
+  booktitle   = "Smart Devices for Medical 4.0 Technologies",
+  publisher   = "CRC Press",
+  address     = "Boca Raton",
+  year        = 2025,
+  month       = {04},
+  pages       = "266-290",
+  chapter     = 2,
+  doi = {10.1201/9781003603610-2},
+}
+
+
 
 @Article{MarcoNuno_Revista_2024_12_00,
 	AUTHOR = {\textbf{M. A. Nuño-Maganda} and Yahir Hernandez-Mier and Angel David Mendoza-Valdez and Lessly Gabriela Galván-Villanueva and Said Polanco-Martagón},
