--- a/Revistas.bib
+++ b/Revistas.bib
@@ -11,7 +11,7 @@
   address     = "Boca Raton",
   year        = 2025,
   month       = {04},
-  pages       = "266-290",
+  pages       = "18--41",
   chapter     = 2,
   doi = {10.1201/9781003603610-2},
 }
