--- a/Revistas.bib
+++ b/Revistas.bib
@@ -17,7 +17,7 @@
 }
 
 
-
+% LatinIndex
 @Article{MarcoNuno_Revista_2024_12_00,
 	AUTHOR = {\textbf{M. A. Nuño-Maganda} and Yahir Hernandez-Mier and Angel David Mendoza-Valdez and Lessly Gabriela Galván-Villanueva and Said Polanco-Martagón},
 	TITLE = "{Sistema de monitoreo remoto de humedad, temperatura y estado de los brotes en un germinador automático}",
@@ -31,7 +31,7 @@
 }
 
 
-
+% LatinIndex
 @Article{MarcoNuno_Revista_2024_09_00,
 	AUTHOR = {\textbf{M. A. Nuño-Maganda} and  Omar Alejandro Pérez Reyes and Mario Coyoy López and Dafne Patricia Moreno Flores and Ramon Uriel Hernández Sánchez},
 	TITLE = "{Aplicación PyQt6 para el conteo en tiempo real: un caso de estudio con detección de naranjas}",
@@ -62,7 +62,7 @@
 
 
 
-
+% JCR
 @article{MarcoNuno_Revista_2024_06_00,
     author = {José Fidencio López-Luna and Eddie Nahúm Armendáriz-Mireles and \textbf{M. A. Nuño-Maganda} and Hiram Herrera-Rivas and Rubén Machucho-Cadena and Jorge Arturo Hernández-Almazán},
     title ={Design and validation of a preliminary instrument to contextualize interactions through information technologies of health professionals},
@@ -77,6 +77,8 @@
     %eprint = {https://doi.org/10.1177/14604582241259323}
 }
 
+
+% LatinIndex
 @Article{MarcoNuno_Revista_2023_10_00,
 	AUTHOR = "Jorge de la Calleja and Elsa de la Calleja and Hujo Jair-Escalante and Eduardo López-Domínguez and María Áuxilio Medina-Nieto and \textbf{M. A. Nuño-Maganda}",
 	TITLE = "{Automatic Image-based Galaxy Classification: An Approach using Fractal Dimension Analysis}",
@@ -89,7 +91,7 @@
 }
 
 
-
+% JCR
 @Article{MarcoNuno_Revista_2023_09_00,
     AUTHOR = {\textbf{M. A. Nuño-Maganda} and Ismael Antonio Dávila-Rodríguez  and Yahir Hernández-Mier  and José Hugo Barrón-Zambrano  and Juan Carlos Elizondo-Leal  and Alan Díaz-Manriquez  and Said Polanco-Martagón},
     TITLE = {Real-Time Embedded Vision System for Online Monitoring and Sorting of Citrus Fruits},
@@ -152,7 +154,7 @@ note = "{\url{10.1088/1361-6552/ac8518}}"
 
 
 
-
+% JCR
 ﻿@Article{MarcoNuno_Revista_2022_06_00,
 author={C{\'e}sar Alfredo Rocha-Herrera 
 and Alan D{\'i}az-Manr{\'i}quez
@@ -177,7 +179,7 @@ note = "{\url{https://doi.org/10.1155/2022/7571208}}"
 }
 
 
-
+% JCR
 ﻿@Article{MarcoNuno_Revista_2022_03_00,
 author={
 \textbf{M. A. Nuño-Maganda} 
@@ -202,7 +204,7 @@ url={https://doi.org/10.1038/s41598-022-08777-x},
 note = "{\url{https://doi.org/10.1038/s41598-022-08777-x}}"
 }
 
-
+% LatinIndex
 @Article{MarcoNuno_Revista_2022_09_00,
 	AUTHOR = "Dino Tonatiuh Gutierrez-Martinez and Orlando Samuel Martinez-Dorantes and Juan Jose Torres-Grimaldo and Adriana Palmero-Torres and Ana Karen Echartea-Juarez and Angela Carrizales and Osiel Gómez and Gabriela Robles and \textbf{M. A. Nuño-Maganda}",
 	TITLE = "{Aplicación móvil para consultar rutas de autobuses urbanos en Ciudad Victoria, Tamaulipas}",
@@ -214,7 +216,7 @@ note = "{\url{https://doi.org/10.1038/s41598-022-08777-x}}"
 	note = "{Aceptado. \textbf{{ISSN:  1870-4069}}}"
 }
 
-
+% LatinIndex
 @Article{ MarcoNuno_Revista_2021_04_00,
 	AUTHOR = "Cristian I. Echartea de la Rosa and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón",
 	TITLE = "{Creación de planes alimenticios mediante algoritmos genéticos para combatir la obesidad infantil en México}",
@@ -227,6 +229,7 @@ note = "{\url{https://doi.org/10.1038/s41598-022-08777-x}}"
 	PAGES = "51--60"
 }
 
+% LatinIndex
 @Article{MarcoNuno_Revista_2021_10_00,
 	AUTHOR = "José Ramon Arratia-Zapata and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón",
 	TITLE = "{Sistema de Monitoreo Remoto de Temperatura y Humedad Utilizando Dispositivos Móviles e IOT}",
@@ -237,6 +240,7 @@ note = "{\url{https://doi.org/10.1038/s41598-022-08777-x}}"
 	note = "{Aceptado. \textbf{{ISSN:  1870-4069}}}"
 }
 
+% JCR
 @Article{MarcoNuno_Revista_2020_11_00,
 AUTHOR = {Juan Carlos Elizondo-Leal and José Gabriel Ramirez-Torres and Jose Hugo  Barrón-Zambrano and Alan Diaz-Manríquez and \textbf{M. A. Nuño-Maganda} and Vicente Paul Saldivar-Alonso },
 TITLE = {Parallel Raster Scan for Euclidean Distance Transform},
@@ -253,6 +257,7 @@ note = "{\url{https://doi.org/10.3390/sym12111808}}"
 
 }
 
+% JCR
 @Article{MarcoNuno_Revista_2020_10_00,
 AUTHOR = {Martín Hernández-Ordoñez  and \textbf{M. A. Nuño-Maganda} and Carlos Adrián Calles-Arriaga and Abelardo Rodríguez-León and Guillermo Efren Ovando-Chacon  and Rolando  Salazar-Hernández  and Omar Montaño-Rivas  and José Margarito Canseco-Cortinas },
 TITLE = {Medical Assistant Mobile Application for Diabetes Control by Simulating a Compartmental Model},
@@ -269,7 +274,7 @@ note = "{\url{https://doi.org/10.3390/app10196846}}"
 }
 
 
-
+% JCR
 @Article{MarcoNuno_Revista_2020_04_00,
 	AUTHOR = {Yahir Hern{\'a}ndez-Mier and \textbf{M. A. Nuño-Maganda} and Said Polanco-Martag{\'o}n and Mar{\'i}a del Refugio Garc{\'i}a Ch{\'a}vez},
 	TITLE = {{Machine Learning Classifiers Evaluation for Automatic Karyogram Generation from G-Banded Metaphase Images}},
@@ -281,6 +286,7 @@ note = "{\url{https://doi.org/10.3390/app10196846}}"
 	note = "{\url{https://doi.org/10.3390/app10082758}, Article ID: \textbf{applsci-759087}, \textbf{{ISSN:  2076-3417}}}",
 }
 
+% LatinINdex
 @Article{ MarcoNuno_Revista_2010_04_00,
 	AUTHOR = "\textbf{M. A. Nuño-Maganda} and C{\'e}sar Torres-Huitzil and Miguel Arias-Estrada",
 	TITLE = "{Population Coding and SpikeProp Hardware Accelerator for Spiking Neural Networks}",
