--- a/Publications.tex
+++ b/Publications.tex
@@ -288,7 +288,7 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 
 \section{Experiencia Profesional y Docente}
  \begin{itemize}[leftmargin=0.15in, label={}]
-\item 2009 -- 2024: \textbf{Profesor de Tiempo Completo}, Universidad Politécnica de Victoria (UPV), Ciudad Victoria, Tamaulipas.  Principales funciones: Catedrático de Asignatura en Nivel Maestría y Licenciatura (Carrera: Ingenier\'ia en Tecnologías de la Información).
+\item 2009 -- \the\year{}: \textbf{Profesor de Tiempo Completo}, Universidad Politécnica de Victoria (UPV), Ciudad Victoria, Tamaulipas.  Principales funciones: Catedrático de Asignatura en Nivel Maestría y Licenciatura (Carrera: Ingenier\'ia en Tecnologías de la Información).
 \ifthenelse{\(\value{num}=1\)}{\hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{Titulo y Cédula}}{}
 
 \item 2005 -- 2009: \textbf{Profesor de Asignatura}, Instituto Tecnol\'ogico Superior de Atlixco (ITSA), Atlixco, Puebla. Principales funciones: Catedrático de Asignatura en Nivel Licenciatura (Carrera: Ingenier\'ia en Sistemas Computacionales). \ifthenelse{\(\value{num}=1\)}{\hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{Titulo y Cédula}}{}
