--- a/Revistas.bib
+++ b/Revistas.bib
@@ -13,7 +13,8 @@
   month       = {04},
   pages       = "18--41",
   chapter     = 2,
-  doi = {10.1201/9781003603610-2},
+  note        = "\textbf{ISSB: 9781003603610}",
+  doi         = {10.1201/9781003603610-2},
 }
 
 
