--- a/Cursos.bib
+++ b/Cursos.bib
@@ -6,8 +6,6 @@
     year = 2025,
     month = 03}
 
-
-
 @unpublished{Curso2024b,
     author       = {},
     title        = {OpenAI Python API Bootcamp: Learn to use AI, GPT, and more!},  
@@ -81,7 +79,7 @@
 
 @unpublished{Curso2022c,
     author       = {},
-    title        = {Curso-Machine Learning, Data Science and Deep Learning with Python.},
+    title        = {Machine Learning, Data Science and Deep Learning with Python.},
     howpublished = {Udemy},
     year = 2022,
     month = 4}
