--- a/TesisDirigidasLicenciatura.bib
+++ b/TesisDirigidasLicenciatura.bib
@@ -7,8 +7,58 @@
 % To DO: Agregar guiones a los apellidos
 
 
+@Misc{TesisUPV2025-01,
+  Title                    = {\textit{Plataforma Web Para El Control Del Parque Vehicular Y Seguimiento De Verificaciones Y Mantenimiento De La Unidades Institucional De La Fiscalía General De Justicia Del Estado De Tamaulipas}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {4},
+  Author = {{Hermayonick Catalina Hernández González}},
+  Year                     = {2025}
+}
+
+@Misc{TesisUPV2025-02,
+  Title                    = {\textit{Reestructuración de Infraestructura Tecnológica para la Implementación de Redes IPv4/IPv6 en Transpais}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {4},
+  Author                   = {{Adrian Pérez Facundo}},
+  Year                     = {2025}
+}
+
+@Misc{TesisUPV2025-03,
+  Title                    = {\textit{Plataforma De Aprendizaje Activo e Interactivo para el desarrollo de Habilidades Tecnologicas a través de Simulaciones Personalizadas con Inteligencia Artificial y Simulaciones 3D para Athenisai Inc}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {4},
+  Author                   = {{Hestybalyz Jackelyn Fernandez Cantú}},
+  Year                     = {2025}
+}
+
+@Misc{TesisUPV2025-04,
+  Title                    = {\textit{Agente inteligente para dar información sobre trámites y servicios a la ciudadanía para la agencia de Innovación e Inteligencia Digital del Estado de Tamaulipas}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {4},
+  Author                   = {{Yatzari Eduve Pecina Vidales}},
+  Year                     = {2025}
+}
+
+@Misc{TesisUPV2025-05,
+  Title                    = {\textit{Integración y optimización del módulo de control escolar en educación especial de la Secretaria de Educación de Tamaulipas}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {4},
+  Author                   = {{Luisana Guadalupe Rodriguez Salas}},
+  Year                     = {2025}
+}
+
+
+@Misc{TesisUPV2025-05,
+  Title                    = {\textit{Feasibility analysis tool for the LEED Energy \& Atmosphere Optimize Energy Performance Credit}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {4},
+  Author                   = {{Diego Alexis Ortiz V ́azquez}},
+  Year                     = {2025}
+}
+
+
 @Misc{TesisUPV2024-01,
-  Title                    = {\textit{Migración del SIC - Creación de Nuevos Modulos Académicos para el Sistema Integral del Cobat (SIC) del Colegio de Bachilleres del Estado de Tamaulipas.}},
+  Title                    = {\textit{Migración del SIC - Creación de Nuevos Modulos Académicos para el Sistema Integral del Cobat (SIC) del Colegio de Bachilleres del Estado de Tamaulipas}},
   HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
   Month                    = {4},
   Author = {{Francisco Gael Sustaita Reyna}},
