--- a/TesisDirigidasLicenciatura.bib
+++ b/TesisDirigidasLicenciatura.bib
@@ -48,11 +48,11 @@
 }
 
 
-@Misc{TesisUPV2025-05,
+@Misc{TesisUPV2025-06,
   Title                    = {\textit{Feasibility analysis tool for the LEED Energy \& Atmosphere Optimize Energy Performance Credit}},
   HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
   Month                    = {4},
-  Author                   = {{Diego Alexis Ortiz V ́azquez}},
+  Author                   = {{Diego Alexis Ortiz Vázquez}},
   Year                     = {2025}
 }
 
