--- a/Revistas.bib
+++ b/Revistas.bib
@@ -131,7 +131,7 @@
 	JOURNAL = "Research in Computing Science",
 	VOLUME = "151",
 	number = "12",
-	note={\url{https://rcs.cic.ipn.mx/2022_151_12/Suspicious%20Lung%20Disease%20Prediction%20from%20Auscultation%20Sounds%20Using%20Neural%20Networks.html}},
+	\url={https://rcs.cic.ipn.mx/2022_151_12/Suspicious%20Lung%20Disease%20Prediction%20from%20Auscultation%20Sounds%20Using%20Neural%20Networks.html},
 	note = "{\textbf{{ISSN:  1870-4069}}}",
 	PAGES = "87--99"
 }
@@ -226,6 +226,7 @@ note = "{\url{https://doi.org/10.1038/s41598-022-08777-x}}"
 	JOURNAL = "Research in Computing Science, Advances in Information Technology",
 	VOLUME = "150",
 	number = "4",
+    url = {https://www.rcs.cic.ipn.mx/2021_150_4/Creacion%20de%20planes%20alimenticios%20mediante%20algoritmos%20geneticos%20para%20combatir%20la%20obesidad.html},
 	note = "{\textbf{{ISSN:  1870-4069}}}",
 	PAGES = "51--60"
 }
@@ -235,10 +236,11 @@ note = "{\url{https://doi.org/10.1038/s41598-022-08777-x}}"
 	AUTHOR = "José Ramon Arratia-Zapata and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón",
 	TITLE = "{Sistema de Monitoreo Remoto de Temperatura y Humedad Utilizando Dispositivos Móviles e IOT}",
 	YEAR = "2021",
-	month = {10},
+	month = {11},
 	JOURNAL = "Research in Computing Science",
 	VOLUME = "150",
 	note = "{Aceptado. \textbf{{ISSN:  1870-4069}}}"
+    url = {https://www.rcs.cic.ipn.mx/2021_150_11/Sistema%20de%20monitoreo%20remoto%20de%20temperatura%20y%20humedad%20utilizando%20dispositivos%20moviles%20e%20IoT.pdf},
 }
 
 % JCR
