--- a/Revistas.bib
+++ b/Revistas.bib
@@ -131,7 +131,7 @@
 	JOURNAL = "Research in Computing Science",
 	VOLUME = "151",
 	number = "12",
-	\url={https://rcs.cic.ipn.mx/2022_151_12/Suspicious%20Lung%20Disease%20Prediction%20from%20Auscultation%20Sounds%20Using%20Neural%20Networks.html},
+	url={https://rcs.cic.ipn.mx/2022_151_12/Suspicious%20Lung%20Disease%20Prediction%20from%20Auscultation%20Sounds%20Using%20Neural%20Networks.html},
 	note = "{\textbf{{ISSN:  1870-4069}}}",
 	PAGES = "87--99"
 }
