--- a/Revistas.bib
+++ b/Revistas.bib
@@ -239,8 +239,9 @@ note = "{\url{https://doi.org/10.1038/s41598-022-08777-x}}"
 	month = {11},
 	JOURNAL = "Research in Computing Science",
 	VOLUME = "150",
+    url = {https://www.rcs.cic.ipn.mx/2021_150_11/Sistema%20de%20monitoreo%20remoto%20de%20temperatura%20y%20humedad%20utilizando%20dispositivos%20moviles%20e%20IoT.pdf},
 	note = "{Aceptado. \textbf{{ISSN:  1870-4069}}}"
-    url = {https://www.rcs.cic.ipn.mx/2021_150_11/Sistema%20de%20monitoreo%20remoto%20de%20temperatura%20y%20humedad%20utilizando%20dispositivos%20moviles%20e%20IoT.pdf}
+
 }
 
 % JCR
