--- a/Cursos.bib
+++ b/Cursos.bib
@@ -1,5 +1,11 @@
+@unpublished{Curso2025b,
+    author       = {},
+    title        = {Fundamentals of publishing},
+    howpublished = {Elsevier Researcher Academy},
+    year = 2025,
+    month = 04}
 
-@unpublished{Curso2025d,
+@unpublished{Curso2025a,
     author       = {},
     title        = {Introduction to Modern AI},
     howpublished = {Cisco Networking Academy},
