--- a/DivulgacionCienciaTecnologia.bib
+++ b/DivulgacionCienciaTecnologia.bib
@@ -1,5 +1,14 @@
 % Encoding: UTF-8
 
+@unpublished{Platica_Taller_2025d,
+    author       = {},
+    title        = {Demostración de Proyectos de Realidad Aumentada y Virtual},
+    year = 2025,
+    month = 03,
+    day = 25,
+    addendum     = {CBTis 271, Ciudad Victoria, Tamaulipas, Mexico}
+}
+
 
 @unpublished{Platica_Taller_2025c,
     author       = {},
