--- a/CongresosEspanol.bib
+++ b/CongresosEspanol.bib
@@ -398,6 +398,7 @@ Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
   year        = 2024,
   Month       = 08,
   pages       = "32-35",
+  URL = {https://case.ar/wp-content/uploads/2024/11/libro2024_D.pdf},
   note        = {ISBN:  978-631-90145-2-5}
 }
 
@@ -411,6 +412,7 @@ Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
   year        = 2024,
   Month       = 08,
   pages       = "50-53",
+  URL = {https://case.ar/wp-content/uploads/2024/11/libro2024_D.pdf},
   note        = {ISBN:  978-631-90145-2-5}
 }
 
