--- a/Cursos.bib
+++ b/Cursos.bib
@@ -1,3 +1,11 @@
+@unpublished{Curso2025c,
+    author       = {},
+    title        = {Writing Skills},
+    howpublished = {Elsevier Researcher Academy},
+    year = 2025,
+    month = 06}
+
+
 @unpublished{Curso2025b,
     author       = {},
     title        = {Fundamentals of publishing},
