--- a/OrganizadorEventos.bib
+++ b/OrganizadorEventos.bib
@@ -1,3 +1,11 @@
+@unpublished{2025_OrganizadorEventos,
+    author       = {},
+    title        = {Organizador del Seminario de Sistemas Inteligentes 2025},
+    howpublished = {Victoria, Tamaulipas, 6 de Junio de 2025.},
+    year = 2025,
+    month = 6}
+
+
 @unpublished{2022_OrganizadorEventos,
     author       = {},
     title        = {Responsable Local de la Competencia RoboCup@Home del Torneo Mexicano de Robótica 2022},
