--- a/Revistas.bib
+++ b/Revistas.bib
@@ -70,7 +70,7 @@
     journal = {Health Informatics Journal},
     volume = {30},
     number = {2},
-    pages = {14604582241259323},
+    %pages = {14604582241259323},
     year = {2024},
     doi = {10.1177/14604582241259323}
     %note ={PMID: 38886113},
@@ -102,10 +102,10 @@
     NUMBER = {18},
     month = {9},
     ARTICLE-NUMBER = {3891},
-    URL = {https://www.mdpi.com/2079-9292/12/18/3891},
+    %URL = {https://www.mdpi.com/2079-9292/12/18/3891},
     ISSN = {2079-9292},
-    DOI = {10.3390/electronics12183891},
-    note = "{\url{https://www.mdpi.com/2079-9292/12/18/3891}}"
+    DOI = {10.3390/electronics12183891}
+    %note = "{\url{https://www.mdpi.com/2079-9292/12/18/3891}}"
 }
 
 % LATININDEX
@@ -175,8 +175,8 @@ volume={2022},
 pages={7571208},
 issn={1687-5265},
 doi={10.1155/2022/7571208},
-url={https://doi.org/10.1155/2022/7571208},
-note = "{\url{https://doi.org/10.1155/2022/7571208}}"
+%url={https://doi.org/10.1155/2022/7571208},
+%note = "{\url{https://doi.org/10.1155/2022/7571208}}"
 }
 
 
@@ -200,9 +200,9 @@ volume={12},
 number={1},
 pages={4868},
 issn={2045-2322},
-doi={10.1038/s41598-022-08777-x},
-url={https://doi.org/10.1038/s41598-022-08777-x},
-note = "{\url{https://doi.org/10.1038/s41598-022-08777-x}}"
+doi={10.1038/s41598-022-08777-x}
+%url={https://doi.org/10.1038/s41598-022-08777-x},
+%note = "{\url{https://doi.org/10.1038/s41598-022-08777-x}}"
 }
 
 % LatinIndex
