--- a/Publications.tex
+++ b/Publications.tex
@@ -231,7 +231,7 @@ citecolor=green]{hyperref}
 
 
 \newcounter{num}
-\setcounter{num}{0} % 1=> LINKS DE EVIDENCIA, 0=> NO LINKS DE EVIDENCIA
+\setcounter{num}{1} % 1=> LINKS DE EVIDENCIA, 0=> NO LINKS DE EVIDENCIA
 
 %-------------------------------------------
 %%%%%%  RESUME STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -415,9 +415,9 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 % De requerir evidencias, deberan incluirse con sus respectivos
 \ifthenelse{\(\value{num}=1\)}{\clearpage}{}
 %\includepdf[pages=1-,link=true]{./../Evidencias/applsci-10-06846.pdf}
-\ifthenelse{\(\value{num}=1\)}{\includepdf[pages={1},link=true]{./../Evidencias/01_MarcoNuno_TituloDoctorado.pdf}}{}
+\ifthenelse{\(\value{num}=1\)}{\includepdf[pages={1},link=true]{Evidencias/2022_Reconocimiento_TMR.pdf}}{}
 %\includepdf[pages=1-,link=true]{./../Evidencias/sensors-18-02202-v2.pdf}
-\ifthenelse{\(\value{num}=1\)}{\includepdf[pages={1},link=true]{./../Evidencias/19_AsignacionProyectoPROMEP.pdf}}{}
+\ifthenelse{\(\value{num}=1\)}{\includepdf[pages={1},link=true]{Evidencias/2022_Reconocimiento_TMR.pdf}}{}
 
 
 \end{document}
