--- a/Publications.tex
+++ b/Publications.tex
@@ -415,9 +415,9 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 % De requerir evidencias, deberan incluirse con sus respectivos
 \ifthenelse{\(\value{num}=1\)}{\clearpage}{}
 %\includepdf[pages=1-,link=true]{./../Evidencias/applsci-10-06846.pdf}
-\ifthenelse{\(\value{num}=1\)}{\includepdf[pages={1},link=true]{Evidencias/2022_Reconocimiento_TMR.pdf}}{}
+\ifthenelse{\(\value{num}=1\)}{\includepdf[pages={1},angle=90,link=true]{Evidencias/2022_Reconocimiento_TMR.pdf}}{}
 %\includepdf[pages=1-,link=true]{./../Evidencias/sensors-18-02202-v2.pdf}
-\ifthenelse{\(\value{num}=1\)}{\includepdf[pages={1},link=true]{Evidencias/2025_06_OrganizadorSeminarioIA.pdf}}{}
+\ifthenelse{\(\value{num}=1\)}{\includepdf[pages={1},angle=90,link=true]{Evidencias/2025_06_OrganizadorSeminarioIA.pdf}}{}
 
 
 \end{document}
