--- a/Publications.tex
+++ b/Publications.tex
@@ -267,15 +267,15 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
  \begin{itemize}[leftmargin=0.15in, label={}]
 \item 2006 -- 2009: \textbf{Doctorado en Ciencias con Especialidad en Ciencias Computacionales}. 
     Instituto Nacional de Astrofísica, Óptica y Electrónica (INAOE), Puebla, México.
-\ifthenelse{\(\value{num}=1\)}{\hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{Titulo y Cédula}}{}
+\ifthenelse{\(\value{num}=1\)}{\hyperlink{Evidencias/2025_06_OrganizadorSeminarioIA}{Titulo y Cédula}}{}
 %
 \item 2001 -- 2003: \textbf{Maestría en Ciencias con Especialidad en Ciencias Computacionales}
     Instituto Nacional de Astrofísica, Óptica y Electrónica (INAOE), Puebla, México. 
-\ifthenelse{\(\value{num}=1\)}{\hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{Titulo y Cédula}}{}
+\ifthenelse{\(\value{num}=1\)}{\hyperlink{Evidencias/2025_06_OrganizadorSeminarioIA}{Titulo y Cédula}}{}
 
 \item 1996 -- 2001: \textbf{Licenciatura en Ingeniería en Computación}.
 	Universidad Americana de Acapulco (Incorporada a la UNAM), Acapulco, México, Graduado con Mención Honorífica. 
-\ifthenelse{\(\value{num}=1\)}{\hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{Titulo y Cédula}}{}
+\ifthenelse{\(\value{num}=1\)}{\hyperlink{Evidencias/2025_06_OrganizadorSeminarioIA}{Titulo y Cédula}}{}
  \end{itemize}
 
 
