--- a/Gestion.bib
+++ b/Gestion.bib
@@ -14,13 +14,27 @@
   month=dec,
   HOWPUBLISHED = {}}
 
+@misc{2024_RevisorCapituloLibroUAT2,
+  Author = {},  
+  TITLE = {Revisor de Capítulo de Libro ``Realidad virtual y aumentada en la educación médica''},
+  YEAR = 2024,
+  month=aug,
+  HOWPUBLISHED = {}}
+
+@misc{2024_RevisorCapituloLibroUAT1,
+  Author = {},  
+  TITLE = {Revisor de Capítulo de Libro ``Estudio de índices vegetativos utilizando redes neuronales convolucionales''},
+  YEAR = 2024,
+  month=aug,
+  HOWPUBLISHED = {}}
+
 
 @misc{2024_CreacionDoctorado,
   Author = {},  
   TITLE = {Miembro de la Comisión de Creación del Programa de Doctorado en Ciencias y Tecnologías Aplicadas de la UPV},
   YEAR = 2024,
   month=mar,
-  HOWPUBLISHED = {}}
+  HOWPUBLISHED = {}}    
 
 @misc{2024_MiembroCCE,
   Author = {},  
@@ -28,6 +42,8 @@
   YEAR = 2024,
   month=oct,
   HOWPUBLISHED = {}}
+
+
 
 @misc{2024_RevisorTequio,
   Author = {},  
