--- a/Publications.tex
+++ b/Publications.tex
@@ -307,7 +307,7 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
  \end{itemize}
 
 % De uso exclusivo UPV - Duplicados entre Congresos, Cap de Libro y Revistas
-\section{Gestion Académica}
+\section{Gestión Académica y Evaluaciones Externas}
 \begin{refsection}[Gestion]
 \nocite{*}
 \printbibliography[heading={none}, keyword=Gestion, resetnumbers=true]
