--- a/Gestion.bib
+++ b/Gestion.bib
@@ -1,3 +1,10 @@
+@misc{2025_DYCTA-UPV,
+  Author = {},  
+  TITLE = {Miembro del Nucleo Académico Básico (NAB) del Doctorado en Ciencias y Tecnologías Avanzadas de la UPV},
+  YEAR = 2025,
+  month=jun,
+  HOWPUBLISHED = {Enero de 2023 a Junio 2025}}
+
 
 @misc{2024_RevisorLibroConacicBUAP,
   Author = {},  
