--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -7,6 +7,17 @@
 % Escenario 3: Se presento en el congreso (CONSTANCIA) y NO se publico (Requeria de mas arbitraje, o los requisitos solicitados eran impensables)
 % Escenario 4: NO se presento en el congreso [Pero el congreso genero constancia](CONSTANCIA) y NO se publico (No se mando version solicitada, Requeria de mas arbitraje, o los requisitos solicitados eran impensables)
 
+% Escenario 1 - Congreso  - COMIA 2025
+@unpublished{Difusion2025a,
+    author = {Juan Tovar-Díaz and Said Polanco-Martagón and \textbf{M. A. Nuño-Maganda} and Mario García-Luna},
+	title = {Phonocardiogram classification using Neural Networks for anomaly heart detection},
+    howpublished = {XVII Congreso Mexicano de Inteligencia Artificial - COMIA 2025},
+%    note={ \hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{EVIDENCE}},
+    year = 2025,
+    month = 05,
+    addendum     = {Ciudad de México, México}}
+
+
 % Escenario 1 - Congreso  - CONACIC 2024- PAper 52
 @unpublished{Difusion2024j,
     author = {Adrián Alejandro Ruiz-Márquez and Brayan Olivares-Rodriguez and Javier Martin Palmero-Torres and Ana Cecilia Rodríguez-Chávez and \textbf{M. A. Nuño-Maganda}},
