--- a/Revistas.bib
+++ b/Revistas.bib
@@ -9,7 +9,7 @@ volume = {33},
 pages = {102473},
 year = {2026},
 issn = {2352-7110},
-doi = {https://doi.org/10.1016/j.softx.2025.102473},
+doi = {10.1016/j.softx.2025.102473},
 author = {José Hugo Barrón-Zambrano and \textbf{M. A. Nuño-Maganda} and Melchor Hernández-Díaz and José de Jesús Rangel-Magdaleno and Yahir Hernández-Mier},
 keywords = {Educational technology, Mobile applications, Mobile learning, Robot programming, Systems simulation, Virtual prototyping}
 }
